--- a/motion/motion.conf
+++ b/motion/motion.conf
@@ -602,11 +602,11 @@ quiet on
 
 # Command to be executed when an event ends after a period of no motion
 # (default: none). The period of no motion is defined by option event_gap.
-on_event_end /home/pi/TrailCam/motion/filehandler.py
+; on_event_end /home/pi/TrailCam/motion/filehandler.py %f %s
 
 # Command to be executed when a picture (.ppm|.jpg) is saved (default: none)
 # To give the filename as an argument to a command append it with %f
-; on_picture_save value
+on_picture_save /home/pi/TrailCam/motion/filehandler.py %f %s
 
 # Command to be executed when a motion frame is detected (default: none)
 ; on_motion_detected value
@@ -621,7 +621,7 @@ on_event_end /home/pi/TrailCam/motion/filehandler.py
 
 # Command to be executed when a movie file (.mpg|.avi) is closed. (default: none)
 # To give the filename as an argument to a command append it with %f
-; on_movie_end value
+on_movie_end /home/pi/TrailCam/motion/filehandler.py %f %s
 
 # Command to be executed when a camera can't be opened or if it is lost
 # NOTE: There is situations when motion don't detect a lost camera!
