--- a/motion/motion.conf
+++ b/motion/motion.conf
@@ -606,7 +606,7 @@ quiet on
 
 # Command to be executed when a picture (.ppm|.jpg) is saved (default: none)
 # To give the filename as an argument to a command append it with %f
-on_picture_save /home/pi/TrailCam/motion/filehandler.py %f %s
+on_picture_save /home/pi/TrailCam/motion/filehandler.py %f
 
 # Command to be executed when a motion frame is detected (default: none)
 ; on_motion_detected value
@@ -621,7 +621,7 @@ on_picture_save /home/pi/TrailCam/motion/filehandler.py %f %s
 
 # Command to be executed when a movie file (.mpg|.avi) is closed. (default: none)
 # To give the filename as an argument to a command append it with %f
-on_movie_end /home/pi/TrailCam/motion/filehandler.py %f %s
+on_movie_end /home/pi/TrailCam/motion/filehandler.py %f
 
 # Command to be executed when a camera can't be opened or if it is lost
 # NOTE: There is situations when motion don't detect a lost camera!
