--- a/motion/motion.conf
+++ b/motion/motion.conf
@@ -25,7 +25,7 @@ setup_mode off
 logfile /home/pi/TrailCam/motion/motion.log
 
 # Level of log messages [1..9] (EMG, ALR, CRT, ERR, WRN, NTC, INF, DBG, ALL). (default: 6 / NTC)
-log_level 7
+log_level 6
 
 # Filter to log messages by type (COR, STR, ENC, NET, DBL, EVT, TRK, VID, ALL). (default: ALL)
 log_type all
@@ -401,7 +401,7 @@ text_double off
 
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
-target_dir /home/pi/TrailCam/motion
+target_dir /home/pi/TrailCam/motion/media
 
 # File path for snapshots (jpeg, ppm or webp) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
@@ -606,7 +606,7 @@ quiet on
 
 # Command to be executed when a picture (.ppm|.jpg) is saved (default: none)
 # To give the filename as an argument to a command append it with %f
-on_picture_save /home/pi/TrailCam/motion/filehandler.py %f
+; on_picture_save /home/pi/TrailCam/motion/filehandler.py %f
 
 # Command to be executed when a motion frame is detected (default: none)
 ; on_motion_detected value
@@ -621,7 +621,7 @@ on_picture_save /home/pi/TrailCam/motion/filehandler.py %f
 
 # Command to be executed when a movie file (.mpg|.avi) is closed. (default: none)
 # To give the filename as an argument to a command append it with %f
-on_movie_end /home/pi/TrailCam/motion/filehandler.py %f
+; on_movie_end /home/pi/TrailCam/motion/filehandler.py %f
 
 # Command to be executed when a camera can't be opened or if it is lost
 # NOTE: There is situations when motion don't detect a lost camera!
